--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Diane Manière
-description: "Business Card Page"
+description: "Diane Manière's personal website"
 url: "http://dianemaniere.com"
 baseurl: ""
 profilepic: "/images/diane.jpg"
