--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -26,7 +26,7 @@
 
 - name: Speaker @ Elm Europe
   date: 2019
-  img: https://yt3.ggpht.com/ytc/AKedOLS9SexT-7OaIhf_vN_mCmA8YpbnrmDUbnBGQqGf=s900-c-k-c0x00ffffff-no-rj
+  img: images/elmeurope2.png
   desc: Talk at the two-day conference dedicated to Elm, functional programming language
   url: https://2019.elmeurope.org
   youtubeUrl: https://www.youtube.com/watch?v=-8zwuUKldYw
