--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "http://dianemaniere.com"
 baseurl: ""
 profilepic: "/images/diane.jpg"
 bkimage: "/images/bg.jpg"
-google_analytics: UA-XXXXXX-X
+google_analytics: G-LP83YYV3S1
 
 author:
   name: "Diane Manière"
